utility: dewebm-folder

--- a/utility web pages/credit.html
+++ b/utility web pages/credit.html
@@ -31,11 +31,11 @@
 	<div style="width:3840; height:2160; margin:0">
 		<div class="credit">
 			<div class="number">
-				[14]
+				[num]
 			</div>
 			<div class="text">
-				Zaha Hadid Architects' King Abdullah Petroleum Studies and Research Center<br />
-				<img class="src" src="youtube.png" />/ArchDaily
+				[title]<br />
+				[platform img][author]
 			</div>
 		</div>
 	</div>
